# Zarith

./: .gitattributes  .gitignore  Changes  DUNE.md  META  Makefile  README  README.md  big_int_Z.ml  big_int_Z.mli  bitest.ml  caml_z.c  caml_z_arm.S  caml_z_i686.S  caml_z_tommath.c  caml_z_x86_64.S  caml_z_x86_64_mingw64.S  configure  configure_env.ml  dune  dune-project  gen_zarith_version.ml  ppx.ml  project.mak  q.ml  q.mli  test.ml  z.ml  z.mli  z.mlip  z.mlp  z_pp.ml  z_pp.pl  zarith-ppx.desc  zarith-ppx.opam  zarith.desc  zarith.opam  zarith_top.ml
.github/workflows/: CI.yml  build.yml
branches/no-asm/: caml_z.c  caml_z_x86_64.S  z.mlip  z.mlp  z_pp.ml
branches/no-asm/tests/: zq.output32
branches/speedup/: caml_z_i686.S  caml_z_x86_64.S  caml_z_x86_64_mingw64.S  project.mak  z.mlip  z.mlp
branches/speedup/tests/: Makefile  times_mpir-i686-w64-mingw32.txt  times_x86_64.txt  timing.ml
config/: discover.ml
examples/: README.md  dune-project  dune-workspace
ppx/: jbuild  ppx.ml  testmain.ml  testppx.ml
src/: caml_z.c  dune  z.ml
src/top/: dune  zarith_top.mli
tags/release-1.1/: caml_z.c  project.mak  z.mlip  z_pp.ml
tags/release-1.2/: README  caml_z.c  project.mak  q.ml
tags/release-1.2.1/: META  caml_z_x86_64_mingw64.S
tags/release-1.3/: META  caml_z_x86_64_mingw64.S  project.mak  z.mlip  z.mlp  z_pp.pl
tags/release-1.4/: README  configure  project.mak  z.mlip  z.mlp
tags/release-1.4.1/: z_pp.pl
tags/release-1.4/tests/: Makefile  tofloat.ml
tags/release-1.4/trunk/: q.ml  z_pp.pl
tests/: Makefile  bi.ml  chi2.ml  dune  extern.data32  extern.data64  extern.ml  intern.ml  intern.output3232  intern.output3264  intern.output6432  introduction.ml  introduction.output  ofstring.ml  testppx.expected  testppx.ml  timing.ml  timings.ml  tobytes.ml  zq.ml  zq.output-LibTomMath-64  zq.output-LibTomMath-64-28  zq.output-LibTomMath-64-60  zq.output32  zq.output64
trunk/: Changes  META  Makefile  README  big_int_Z.ml  bitest.ml  caml_z.c  caml_z_arm.S  caml_z_i686.S  caml_z_x86_64.S  configure  project.mak  q.ml  q.mli  test.ml  z.mlip  z.mlp  z_pp.ml  z_pp.pl
trunk/tests/: Makefile  bi.ml  zq.ml  zq.output32  zq.output64
