(library
 (name zarith)
 (wrapped false)
 (flags -w -6)
 (library_flags -cclib -lgmp)
 (modules q z big_int_Z)
 (foreign_archives caml_z_x86_64)
 (foreign_stubs
  (language c)
  (names caml_z)
  (flags :standard -O3 -Wall -Wextra -DZ_OCAML_HASH -DZ_OCAML_COMPARE_EXT -DHAS_GMP -DZ_ELF -DZ_DOT_LABEL_PREFIX)))

(rule
 (targets libcaml_z_x86_64.a)
 (action
  (run gcc -DZ_OCAML_HASH -DZ_OCAML_COMPARE_EXT -DHAS_GMP -DZ_ELF -DZ_DOT_LABEL_PREFIX -c caml_z_x86_64.S -o %{targets})))

(rule
 (targets z.ml z.mli z_features.h)
 (deps z.mlp z.mlip caml_z_x86_64.S z_pp.pl)
 (action
  (run ./z_pp.pl x86_64)))
