opam-version: "2.0"
name: "zarith"
maintainer: "Xavier Leroy <xavier.leroy@inria.fr>"
authors: [
  "Antoine Miné"
  "Xavier Leroy"
  "Pascal Cuoq"
]
homepage: "https://github.com/ocaml/Zarith"
bug-reports: "https://github.com/ocaml/Zarith/issues"
dev-repo: "git+https://github.com/ocaml/Zarith.git"
build: [
  ["dune" "build" "-p" "zarith" ]
]
depends: [
  "ocaml"     {>= "4.04.0"}
  "dune"
  ("gmp" | "conf-gmp" )
]
synopsis:
  "Implements arithmetic and logical operations over arbitrary-precision integers"
description: """
The Zarith library implements arithmetic and logical operations over
arbitrary-precision integers. It uses GMP to efficiently implement
arithmetic over big integers. Small integers are represented as Caml
unboxed integers, for speed and space economy."""
url {
 src: "git+https://github.com/mirage/Zarith.git#22adda581a979c020de856e85781814a0ad5769a"
}
