opam-version: "2.0"
name: "zarith"
version: "1.14"
maintainer: "Xavier Leroy <xavier.leroy@inria.fr>"
authors: [
  "Antoine Miné"
  "Xavier Leroy"
  "Pascal Cuoq"
]
homepage: "https://github.com/ocaml/Zarith"
bug-reports: "https://github.com/ocaml/Zarith/issues"
dev-repo: "git+https://github.com/ocaml/Zarith.git"
license: "LGPL-2.0-only WITH OCaml-LGPL-linking-exception"
build: [
  ["./configure"] {os != "openbsd" & os != "freebsd" & os != "macos"}
  [
    "sh"
    "-exc"
    "LDFLAGS=\"$LDFLAGS -L/usr/local/lib\" CFLAGS=\"$CFLAGS -I/usr/local/include\" ./configure"
  ] {os = "openbsd" | os = "freebsd"}
  [
    "sh"
    "-exc"
    "LDFLAGS=\"$LDFLAGS -L/opt/local/lib -L/usr/local/lib\" CFLAGS=\"$CFLAGS -I/opt/local/include -I/usr/local/include\" ./configure"
  ] {os = "macos" & os-distribution != "homebrew"}
  [
    "sh"
    "-exc"
    "LDFLAGS=\"$LDFLAGS -L/opt/local/lib -L/usr/local/lib\" CFLAGS=\"$CFLAGS -I/opt/local/include -I/usr/local/include\" ./configure"
  ] {os = "macos" & os-distribution = "homebrew" & arch = "x86_64" }
  [
    "sh"
    "-exc"
    "LDFLAGS=\"$LDFLAGS -L/opt/homebrew/lib\" CFLAGS=\"$CFLAGS -I/opt/homebrew/include\" ./configure"
  ] {os = "macos" & os-distribution = "homebrew" & arch = "arm64" }
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"     {>= "4.07.0"}
  "ocamlfind"
  "conf-pkg-config"
  "conf-gmp"
]
synopsis:
  "Implements arithmetic and logical operations over arbitrary-precision integers"
description: """
The Zarith library implements arithmetic and logical operations over
arbitrary-precision integers. It uses GMP to efficiently implement
arithmetic over big integers. Small integers are represented as Caml
unboxed integers, for speed and space economy."""
